# HackCV

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  conanfile.txt
src/: example  example.cpp  main.cpp  segmentation.cpp  segmentation.h
travis/: install.sh  run.sh
